[package]
name = "doorbell-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs-next = "2.0.0"
serde = "1.0.144"
serde_derive = "1.0.103"
lazy_static = "1.4.0"
solana-sdk = "1.11.7"
serde_yaml = "0.8.23"
borsh = "0.9.3"
solana-clap-utils = "1.11.7"
solana-program = "1.11.7"